--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "functions": {
-      "api/*.js": {
+      "app/api/scrape/route.js": {
         "includeFiles": "downloads/yt-dlp"
       }
     }
