--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "curl -L https://github.com/yt-dlp/yt-dlp/releases/download/latest/yt-dlp -o ./bin/yt-dlp && chmod +x ./bin/yt-dlp"
+    "postinstall": "curl -L https://github.com/yt-dlp/yt-dlp/releases/download/latest/yt-dlp -o ./downloads/yt-dlp && chmod +x ./downloads/yt-dlp"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
